Fixed coinbase and private key from reader

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
+- protobuffer encoding / decoding
 - remove random (tx, block, etc) from tests and use the util/random functions and fix potential circular dependencies
 - double check what transactions to use from txpool before creating a new block
-- protobuffer encoding / decoding
-- GRPC transport maybe?
+- Fix error logging in blockhain.go (some logs not passing through)
+- Taks block rewards
